# ChangeLog for media-libs/libcanberra
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libcanberra/ChangeLog,v 1.43 2010/07/20 02:23:57 jer Exp $

  20 Jul 2010; Jeroen Roovers <jer@gentoo.org> libcanberra-0.11.ebuild,
  libcanberra-0.22.ebuild, libcanberra-0.23.ebuild, libcanberra-0.25.ebuild:
  Drop HPPA keywording (bug #324511).

  07 Jul 2010; Samuli Suominen <ssuominen@gentoo.org>
  libcanberra-0.23.ebuild:
  ppc64 stable wrt #314899

*libcanberra-0.25 (18 Jun 2010)

  18 Jun 2010; Pacho Ramos <pacho@gentoo.org> +libcanberra-0.25.ebuild:
  Version bump (bug #318721 by Samuli Suominen): GTK code is now fine with
  GSEAL, minor fixes in the PulseAudio backend, other fixes. Optionally
  build with Gtk+ 3.x in addition to Gtk+ 2.x (disabled for now).

  04 Jun 2010; Markus Meier <maekke@gentoo.org> libcanberra-0.23.ebuild:
  x86 stable, bug #314899

  03 May 2010; Olivier Crête <tester@gentoo.org> libcanberra-0.23.ebuild:
  amd64 stable, bug #314899

  11 Apr 2010; Raúl Porcel <armin76@gentoo.org> libcanberra-0.22.ebuild:
  alpha/arm/ia64/sh/sparc stable wrt #305931

  07 Apr 2010; Brent Baude <ranger@gentoo.org> libcanberra-0.22.ebuild:
  Marking libcanberra-0.22 ppc for bug 305931

  04 Mar 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  libcanberra-0.22.ebuild:
  x86 stable wrt #305931

  01 Mar 2010; Brent Baude <ranger@gentoo.org> libcanberra-0.22.ebuild:
  Marking libcanberra-0.22 ppc64 for bug 305931

  23 Feb 2010; Samuli Suominen <ssuominen@gentoo.org>
  libcanberra-0.23.ebuild:
  Run elibtoolize for ~x86-fbsd.

*libcanberra-0.23 (20 Feb 2010)

  20 Feb 2010; Samuli Suominen <ssuominen@gentoo.org>
  +libcanberra-0.23.ebuild:
  Version bump.

  20 Feb 2010; Samuli Suominen <ssuominen@gentoo.org>
  libcanberra-0.22.ebuild:
  amd64 stable wrt #305931

  20 Feb 2010; Samuli Suominen <ssuominen@gentoo.org>
  libcanberra-0.22.ebuild:
  Install HTML documentation to /usr/share/doc/${PF}/html.
