@@ -4,9 +4,9 @@ DIST libcanberra-0.11.tar.gz 530273 RMD160 77a38ec12d0c9e5f2ee460fc2150298a81e59
 DIST libcanberra-0.22.tar.gz 459404 RMD160 3cccf6b7955aa2926514d5f3e6f48849edea0c1f SHA1 b1c642b0e1322dcbf1a791d4d87dd92cdc002b12 SHA256 6a87737c3d045549a4a9c789cfc565a48185a586aa1a59243dea6421e9978581
 DIST libcanberra-0.23.tar.gz 460205 RMD160 5165384d4ebbe2a692ed3eadbe2bf2d68cf93e8c SHA1 20ba6a3c16b0d93baacfa411a49966fdbb578d0a SHA256 a7d0cf282a9fc8d1e41c082b72a2bf4cf86a6d599f0262484bac95bab57a0960
 DIST libcanberra-0.25.tar.gz 463014 RMD160 eb05114133638f5e27a237da6ea74f64de1b4d26 SHA1 cb86b88af99936134929e120b2a8d55466de1d0a SHA256 46329eda4c877206232d4c906e8f5f401518cec52859395cde3a9e39ea97553c
-EBUILD libcanberra-0.11.ebuild 1723 RMD160 360ccd4d7524bfd336ccfce1a76f490f502cdf81 SHA1 42f67a32aa28997efe644c9ff9800f703749bb6b SHA256 254a891c0316c55a72eba271f5a4156a1805cefa64cdd1da9b72f8847339d93f
-EBUILD libcanberra-0.22.ebuild 2361 RMD160 6bf9cf24c7182047df458e0e536a047a96cc5513 SHA1 05c4d9411bde8ddc4d5d83d24023e570fbeecf53 SHA256 3fded96477c41306e9884078f043af570e754d27a65fd5bdfd0e48101f0a621f
-EBUILD libcanberra-0.23.ebuild 1463 RMD160 837947803e16aa667416bf08ae527a2715558bb3 SHA1 ea2418e2128ec6ed21f315f0f7c271258830f75b SHA256 06b14b431b026a09ef98c13d44c780f8724064a38a0e83791be1c2d6acdfd25f
-EBUILD libcanberra-0.25.ebuild 1510 RMD160 664fe75a1bd2ea8bbffc3e16d111685f9795ee65 SHA1 fba8ac221ddc2633c0a39bf325fec2c6e2a1b114 SHA256 f8b51aafa63e5e043f88fc70117de6ee85548247e7e6a1ff675fee4e50545024
-MISC ChangeLog 7055 RMD160 1856ea5efcfcb659cec02b580b0b8c33327ef6ba SHA1 25e0c23a08aabfdf1f4f2646e9e0c9efd50a9a79 SHA256 049c1e4cb940e9408841d4d8df1c385c1e35a56d477d05ba5e422d6fa4e1bebf
+EBUILD libcanberra-0.11.ebuild 1728 RMD160 6c14475fadaa4b8743e68d691918aefafa6f3880 SHA1 bcc3f576091884e54ed62e0e4a7f7c9cca93df17 SHA256 fa7ec7f7251eb1373aecf4848662dbd767f73e6b9fbd0f4246e3d041cd773c6c
+EBUILD libcanberra-0.22.ebuild 2367 RMD160 48b689a4deea3f38408a89715ad626273d74c029 SHA1 6bbf85c883a05209bca9e2336f8589900ebbfeee SHA256 ab3d0a175d330b13ecd117f1d19f1b7a1e6bf6ddeba215922401f4b0867b5f52
+EBUILD libcanberra-0.23.ebuild 1469 RMD160 c213518ed8999cc1dd0365f3bdedb7c2bd5c1e6e SHA1 79b78e631d579fbed3d45adc38bd75a4bcc9e243 SHA256 17f92c9086d5f5cae7826b1f8dfe69817f5b098a9b34fae807cee07c981e8d9d
+EBUILD libcanberra-0.25.ebuild 1516 RMD160 c90710967ccdd7c625694c1eb7f3e8b773def456 SHA1 f5b1fac6be900d3251e9d6ad2707954ad77f4b97 SHA256 e2b3e1a44246d26955d7ef2a8c68fcee3278ca7caad4c189e289d9074be42825
+MISC ChangeLog 7252 RMD160 8934e2064df8a0cacf5d347d2963d7d34f0f6dfa SHA1 59f9e8529de3744f7112c54ab6b54872e382c66c SHA256 b996c81ae4430ed8ee8d7619f9336edbd950d177d0e526e867d6e11332923e56
 MISC metadata.xml 1100 RMD160 2b090276db79bfa2036a7d12e5d644410dbb3c24 SHA1 eb40123883d82bc3148b2af0d1c1b7c45a10fb88 SHA256 b719c63a7e7c777ae8afb2526f840e4cb24fcd357a41705f85253354fcf9032c
