@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/libcanberra
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libcanberra/ChangeLog,v 1.43 2010/07/20 02:23:57 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libcanberra/ChangeLog,v 1.44 2010/07/20 03:01:15 jer Exp $
+
+  20 Jul 2010; Jeroen Roovers <jer@gentoo.org> libcanberra-0.11.ebuild,
+  libcanberra-0.22.ebuild, libcanberra-0.23.ebuild, libcanberra-0.25.ebuild:
+  Restore HPPA keywording thanks to ssuominen.
 
   20 Jul 2010; Jeroen Roovers <jer@gentoo.org> libcanberra-0.11.ebuild,
   libcanberra-0.22.ebuild, libcanberra-0.23.ebuild, libcanberra-0.25.ebuild:
